deployment/bff.yaml
apiVersion: v1
kind: Service
metadata:
  name: bff-service
spec:
  selector:
    app: bff
  ports:
  - protocol: TCP
    port: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff-deployment
  labels:
    app: bff
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bff
  template:
    metadata:
      labels:
        app: bff
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - bff
              topologyKey: kubernetes.io/hostname
      containers:
      - name: bff
        image: sabbox/bff:7
        ports:
        - containerPort: 8081
