deployment/joke-generator.yaml
apiVersion: v1
kind: Service
metadata:
  name: joke-generator-service
spec:
  selector:
    app: joke-generator
  ports:
  - protocol: TCP
    port: 8082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: joke-generator-deployment
  labels:
    app: joke-generator
spec:
  replicas: 2
  selector:
    matchLabels:
      app: joke-generator
  template:
    metadata:
      labels:
        app: joke-generator
    spec:
      containers:
      - name: joke-generator
        image: sabbox/joke-generator:2
        ports:
        - containerPort: 8082
