deployment/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app
spec:
  rules:
  - host: front.k8s.pncdev.net
    http:
      paths:
      - path: /
        backend:
          serviceName: front-service
          servicePort: 8080
  - host: bff.k8s.pncdev.net
    http:
      paths:
      - path: /
        backend:
          serviceName: bff-service
          servicePort: 8081
